Wed Apr 30 00:24:05 1997  John W. Eaton  <jwe@bevo.che.wisc.edu>

	* ov-base.h, ov-bool-mat.cc, ov-bool-mat.h, ov-bool.cc, ov-bool.h,
	ov-ch-mat.cc, ov-ch-mat.h, ov-complex.cc, ov-complex.h,
	ov-cx-mat.cc, ov-cx-mat.h, ov-file.cc, ov-file.h, ov-list.cc,
	ov-range.cc, ov-range.h, ov-re-mat.cc, ov-re-mat.h, ov-scalar.cc,
	ov-scalar.h, ov-str-mat.cc, ov-struct.cc, ov.h (scalar_value):
	New function.  Same as double_value, but name is consistent with
	octave_scalar class.

	* op-fil-b.cc, op-fil-cm.cc, op-fil-lis.cc, op-fil-rec.cc,
	op-fil-str.cc, op-fil-bm.cc, op-fil-cs.cc, op-fil-m.cc,
	op-fil-s.cc: New files.

	* ops.h (ASSIGNOPDECL, DEFASSIGNOP, DEFASSIGNOP_FN, CONVDECL,
	DEFCONV, BINOPDECL, DEFBINOPX, DEFBINOP, DEFBINOP_OP, DEFBINOP_FN,
	BINOP_NONCONFORMANT): New macros.
	* op-b-b.cc, op-bm-bm.cc, op-cm-cm.cc, op-cm-cs.cc, op-cm-m.cc,
	op-cm-s.cc, op-cs-cm.cc, op-cs-cs.cc, op-cs-m.cc, op-cs-s.cc,
	op-m-cm.cc, op-m-cs.cc, op-m-m.cc, op-m-s.cc, op-s-cm.cc,
	op-s-cs.cc, op-s-m.cc, op-s-s.cc, op-str-str.cc: Use them.

	* Makefile.in (octave): Also depend on ops.o.

	* builtins.h: Delete.
	* octave.cc: Add extern declaration here.

	* mappers.h: Delete.
	* Makefile.in (INCLUDES): Delete from list.
	* mkbuiltins: Add extern declaration in builtins.cc.

	* mkops: New file.
	* ops.cc: Delete.
	* Makefile.in (SOURCES): Delete from the list.
	(ops.cc): New target.
	(OP_SOURCES): New list.  Move all op-*.cc files here from SOURCES.
	Add $(OP_SOURCES) to SOURCES list.

	* variables.cc (symbols_of_variables): No longer static.
	* ov.cc (symbols_of_ov): Rename from symbols_of_value.

	* ov-base.h: Delete declaration for install_base_type_conversions.
	* op-b-b.h, op-bm-bm.h, op-cm-cm.h, op-cm-cs.h, op-cm-m.h,
	op-cm-s.h, op-cs-cm.h, op-cs-cs.h, op-cs-m.h, op-cs-s.h,
	op-m-cm.h, op-m-cs.h, op-m-m.h, op-m-s.h, op-s-cm.h, op-s-cs.h,
	op-s-m.h, op-s-s.h, op-str-str.h: Delete.
	* Makefile.in (INCLUDES): Delete them from the list.
